--- a/essence/checkout.html
+++ b/essence/checkout.html
@@ -55,7 +55,7 @@
                                 </div>
                             </li>
                             
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                     <!-- Nav End -->
@@ -148,11 +148,11 @@
             <!-- Cart Summary -->
             <div class="cart-amount-summary">
 
-                <h2>Summary</h2>
+                <h2>Resumen</h2>
                 <ul class="summary-table">
                     <li><span>subtotal:</span> <span>$274.00</span></li>
-                    <li><span>delivery:</span> <span>Free</span></li>
-                    <li><span>discount:</span> <span>-15%</span></li>
+                    <li><span>costo de envío:</span> <span>Free</span></li>
+                    <li><span>descuento:</span> <span>-15%</span></li>
                     <li><span>total:</span> <span>$232.00</span></li>
                 </ul>
                 <div class="checkout-btn mt-100">
@@ -186,74 +186,58 @@
                     <div class="checkout_details_area mt-50 clearfix">
 
                         <div class="cart-page-heading mb-30">
-                            <h5>Billing Address</h5>
+                            <h5>Datos para el envío</h5>
                         </div>
 
                         <form action="#" method="post">
                             <div class="row">
                                 <div class="col-md-6 mb-3">
-                                    <label for="first_name">First Name <span>*</span></label>
+                                    <label for="first_name">Nombre <span>*</span></label>
                                     <input type="text" class="form-control" id="first_name" value="" required>
                                 </div>
                                 <div class="col-md-6 mb-3">
-                                    <label for="last_name">Last Name <span>*</span></label>
+                                    <label for="last_name">Apellido <span>*</span></label>
                                     <input type="text" class="form-control" id="last_name" value="" required>
                                 </div>
                                 <div class="col-12 mb-3">
-                                    <label for="company">Company Name</label>
-                                    <input type="text" class="form-control" id="company" value="">
-                                </div>
-                                <div class="col-12 mb-3">
-                                    <label for="country">Country <span>*</span></label>
+                                    <label for="country">País<span>*</span></label>
                                     <select class="w-100" id="country">
-                                        <option value="usa">United States</option>
-                                        <option value="uk">United Kingdom</option>
-                                        <option value="ger">Germany</option>
-                                        <option value="fra">France</option>
-                                        <option value="ind">India</option>
-                                        <option value="aus">Australia</option>
-                                        <option value="bra">Brazil</option>
-                                        <option value="cana">Canada</option>
+                                        <option value="usa">Estados Unidos</option>
+                                        <option value="uk">Alemania</option>
+                                        <option value="ger">Australia</option>
+                                        <option value="fra">Francia</option>
+                                        <option value="ind">Guatemala</option>
+                                        <option value="aus">Haití</option>
+                                        <option value="bra">India</option>
+                                        <option value="cana">Perú</option>
                                     </select>
                                 </div>
                                 <div class="col-12 mb-3">
-                                    <label for="street_address">Address <span>*</span></label>
+                                    <label for="city">Ciudad <span>*</span></label>
+                                    <input type="text" class="form-control" id="city" value="">
+                                </div>
+                                <div class="col-12 mb-3">
+                                    <label for="street_address">Dirección <span>*</span></label>
                                     <input type="text" class="form-control mb-3" id="street_address" value="">
                                     <input type="text" class="form-control" id="street_address2" value="">
                                 </div>
                                 <div class="col-12 mb-3">
-                                    <label for="postcode">Postcode <span>*</span></label>
+                                    <label for="postcode">Código Postal <span>*</span></label>
                                     <input type="text" class="form-control" id="postcode" value="">
                                 </div>
                                 <div class="col-12 mb-3">
-                                    <label for="city">Town/City <span>*</span></label>
-                                    <input type="text" class="form-control" id="city" value="">
-                                </div>
-                                <div class="col-12 mb-3">
-                                    <label for="state">Province <span>*</span></label>
-                                    <input type="text" class="form-control" id="state" value="">
-                                </div>
-                                <div class="col-12 mb-3">
-                                    <label for="phone_number">Phone No <span>*</span></label>
+                                    <label for="phone_number">Teléfono:<span>*</span></label>
                                     <input type="number" class="form-control" id="phone_number" min="0" value="">
                                 </div>
                                 <div class="col-12 mb-4">
-                                    <label for="email_address">Email Address <span>*</span></label>
+                                    <label for="email_address">Correo electronico <span>*</span></label>
                                     <input type="email" class="form-control" id="email_address" value="">
                                 </div>
 
                                 <div class="col-12">
                                     <div class="custom-control custom-checkbox d-block mb-2">
                                         <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                        <label class="custom-control-label" for="customCheck1">Terms and conitions</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox d-block mb-2">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck2">
-                                        <label class="custom-control-label" for="customCheck2">Create an accout</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox d-block">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck3">
-                                        <label class="custom-control-label" for="customCheck3">Subscribe to our newsletter</label>
+                                        <label class="custom-control-label" for="customCheck1">Acepto los terminos y condiciones</label>
                                     </div>
                                 </div>
                             </div>
@@ -265,16 +249,16 @@
                     <div class="order-details-confirmation">
 
                         <div class="cart-page-heading">
-                            <h5>Your Order</h5>
-                            <p>The Details</p>
+                            <h5>Orden</h5>
+                            <p>Detalle</p>
                         </div>
 
                         <ul class="order-details-form mb-4">
-                            <li><span>Product</span> <span>Total</span></li>
-                            <li><span>Cocktail Yellow dress</span> <span>$59.90</span></li>
-                            <li><span>Subtotal</span> <span>$59.90</span></li>
-                            <li><span>Shipping</span> <span>Free</span></li>
-                            <li><span>Total</span> <span>$59.90</span></li>
+                            <li><span>Producto</span> <span>Total</span></li>
+                            <li><span>Cocktail Yellow dress</span> <span>Q300.00</span></li>
+                            <li><span>Subtotal</span> <span>Q300.00</span></li>
+                            <li><span>Costo de envío</span> <span>Gratis</span></li>
+                            <li><span>Total</span> <span>Q300.00</span></li>
                         </ul>
 
                         <div id="accordion" role="tablist" class="mb-4">
@@ -287,49 +271,49 @@
 
                                 <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra tempor so dales. Phasellus sagittis auctor gravida. Integ er bibendum sodales arcu id te mpus. Ut consectetur lacus.</p>
+                                        <p>Serás redirigido a la página de paypal.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
                                     <h6 class="mb-0">
-                                        <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"><i class="fa fa-circle-o mr-3"></i>cash on delievery</a>
+                                        <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"><i class="fa fa-circle-o mr-3"></i>Pago contra entrega</a>
                                     </h6>
                                 </div>
                                 <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quis in veritatis officia inventore, tempore provident dignissimos.</p>
+                                        <p>Cancela cuando recibas tu orden.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
                                     <h6 class="mb-0">
-                                        <a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"><i class="fa fa-circle-o mr-3"></i>credit card</a>
+                                        <a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"><i class="fa fa-circle-o mr-3"></i>Tarjeta de credito</a>
                                     </h6>
                                 </div>
                                 <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quo sint repudiandae suscipit ab soluta delectus voluptate, vero vitae</p>
+                                        <p>Tarjeta de crédito o débito.</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingFour">
                                     <h6 class="mb-0">
-                                        <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour"><i class="fa fa-circle-o mr-3"></i>direct bank transfer</a>
+                                        <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour"><i class="fa fa-circle-o mr-3"></i>Transferencia bancaria</a>
                                     </h6>
                                 </div>
                                 <div id="collapseFour" class="collapse show" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
                                     <div class="card-body">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est cum autem eveniet saepe fugit, impedit magni.</p>
+                                        <p>Se te brinda un número de cuenta para que hagas tu pago en cualquier banco cercano.</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <a href="#" class="btn essence-btn">Place Order</a>
+                        <a href="#" class="btn essence-btn">Confirmar orden</a>
                     </div>
                 </div>
             </div>
