--- a/essence/shop.html
+++ b/essence/shop.html
@@ -55,7 +55,7 @@
                                 </div>
                             </li>
                             
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact.html">Contacto</a></li>
                         </ul>
                     </div>
                     <!-- Nav End -->
